--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,24 +1,8 @@
-=======
-CHANGES
-=======
-
-0.2.1 (Unreleased)
+1.0.2 (Unreleased)
 ------------------
 
 
-0.2.0 (2009-08-12)
+1.0.1 (2010-01-19)
 ------------------
 
-- Copyright changed to 'Zope Foundation and Contributors'
-
-
-0.1.1 (2009-05-20)
-------------------
-
-- Unicode bug fixed
-
-
-0.1.0 (2009-04-09)
-------------------
-
-- Initial release
+- zojax initial release
